# osmose

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
osmose-client/: Cargo.toml
osmose-client/src/: lib.rs
osmose-generated/: Cargo.toml  build.rs
osmose-generated/protos/: osmose.proto
osmose-generated/src/: lib.rs
osmose-identifier/: Cargo.toml
osmose-identifier/src/: lib.rs
osmose-server/: Cargo.toml
osmose-server/src/: main.rs  rules_database.rs
osmose-server/test/: rules.json
samples/: conftest.py
samples/fixtures/: systest.py
samples/simple_client_server/: rules.json  test_simple_client_server.py
samples/simple_client_server/scs_client/: Cargo.toml
samples/simple_client_server/scs_client/src/: main.rs
samples/simple_client_server/scs_server/: Cargo.toml
samples/simple_client_server/scs_server/src/: main.rs
