[package]
name = "osmose-client"
version = "0.1.0"
authors = ["Mark Kirichenko <atanzuuu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmose-generated = { path = "../osmose-generated" }
osmose-identifier = { path = "../osmose-identifier" }
protobuf = "2.22"
log = "0.4"
