[package]
name = "scs_server"
version = "0.1.0"
authors = ["Mark Kirichenko <atanzuuu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
osmose-identifier = { path = "../../../osmose-identifier" }
osmose-client = { path = "../../../osmose-client" }
